[package]
name = "pico-std-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustcode"
crate-type = ["staticlib"]

[dependencies]
panic-abort = "0.3.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"