[package]
name = "pico-std-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustcode"
crate-type = ["staticlib"]

[dependencies]
#embedded-hal = "0.2.7"
#panic-halt = "0.2.0"
#panic-abort = "0.3.2"
#rp2040-hal = "0.8.0"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "s"