[package]
name = "pico-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["stdio-uart"]
stdio-uart = []
# Currently, stdio-usb driver does not work
# stdio-usb = []
stdio-semihosting = []
wifi = []

[dependencies]
embedded-hal = "0.2.7"
# Intrinsics (e.g. floating point math) are already provided by Pico SDK
rp2040-hal = { version = "0.8.0", features = ["disable-intrinsics"] }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "s"

[build-dependencies]
cmake = "0.1.50"
embuild = { version = "0.31.1", features = ["cmake"] }

[patch.crates-io]
# Last revision where cortex_m::interrupt::free() still takes one-argument function but no preassembled binary is used
cortex-m = { git = "https://github.com/rust-embedded/cortex-m.git", rev = "e46e2310adc86a5a09a1858a23ecdde2a2c6963f" }

[[example]]
name = "blinky"
crate-type = ["bin"]

[[example]]
name = "threads"
crate-type = ["bin"]

[[example]]
name = "blinky_pico_w"
crate-type = ["bin"]
required-features = ["wifi"]